# cnc-computing-course

./: .gitignore  LICENSE  README.md  index.html  pyproject.toml  reqirements.txt  requirements.txt  requirements_mpi.txt
Day1/: 311024_1600_I.txt  add_numbers.py  example_submission.py  run_python_code.sh
Day1/python_code/: estimate_resources.py  get_mean.py  mycode.py  say_hello.py
Day1/slurm_examples/: script.sh  script3.sh
Day1_new/: 010124_1300_L.txt  050624_0900_I.txt  100424_0900_K.txt  run_python_code.sh
Day1_new/slurm_examples/: make_large_array.py  script2.sh  test_slurm.sh
Day2/: Cn5_data.fits  Shuffled_array.npy  sluggs_5846_gcs.txt
Day3/: bad_code.py  coding_best_practice.py
Day4_new/: numpy_basics.ipynb
Day5_new/: coding_best_practice.ipynb
bash_scripts/: cnc_test_script.sh  slurm_template.sh
cn5_pkg/: README.md  __init__.py  cn5.py
code/day1_01_git_github/: git_github_slides.md  git_tutorial.md
code/day1_02_python/: 01_logging.py  01_python_slides.md  python_slides.md  python_venv_slides.md
code/day1_03_data_formats/: 01_data_formats.md
code/day2_01_bash/: 01_bash.md
code/day2_01_hpc_ozstar/: 01_hpc_ozstar.md
code/day2_02_hpc_ozstar/: 01_hpc_ozstar.md  01_resource_estimate.py  utils.py
code/day3_01_uv_mise/: 01_uv_mise.md
code/day3_02_interactive_computing/: 01_interactive_computing.md
code/day3_03_good_practises/: 01_good_practises.md
code/day4_01_vscode/: 01_debugging.py  01_vscode.md
code/day4_02_end2end_workflows/: 01_combine.md
code/day4_03_sshkeys/: 01_sshkeys.md
code/day5_01_end2end_workflows/: 01_combine.md
code/day5_02_sshkeys/: 01_sshkeys.md
content/: introduction.md
content/additional_resources_01_vscode/: 01_vscode.html  01_vscode.md
content/day1_02_python/: 01_logging.py
content/day1_03_data_formats/: 01_data_formats.md  01_data_formats.py
content/day2_01_bash/: 01_bash.md  01_bash.sh
content/day2_02_hpc_ozstar/: 02_parallel_computing.md  02_parallel_computing.py
content/day3_01_uv_mise/: 01_uv_mise.md
content/day3_02_interactive_computing/: 01_jupyter_colab.ipynb
content/day3_03_good_practises/: 01_good_practises.md
content/day4_01_vscode/: 01_debugging.py
content/session1_01_bash/: 01_bash.html  01_bash.md
content/session1_01_git_github/: 01_git_github_slides.html  01_git_github_slides.md  01_pull_request.py
content/session1_02_git_github/: 01_git_github_slides.html  01_git_github_slides.md  01_pull_request.py
content/session1_02_python/: 01_python_slides.html  01_python_slides.md  02_matplotlib.py  02_numpy.py  03_matplotlib.py  04_astropy.py
content/session1_03_data_formats/: 01_data_formats.html  01_data_formats.py
content/session1_03_sshkeys/: 01_sshkeys.html  01_sshkeys.md
content/session2_01_bash/: 01_bash.html  01_bash.md
content/session2_01_python/: 01_numpy.py  01_python_slides.html  01_python_slides.md  02_matplotlib.py  03_pandas.py  05_logging.py
content/session2_02_data_formats/: 01_data_formats.html  01_data_formats.md  01_data_formats.py
content/session2_02_hpc_ozstar/: 01_hpc_ozstar.html  01_hpc_ozstar.md  02_parallel_computing.html  02_parallel_computing.md  02_parallel_computing.py
content/session4_02_good_practises/commandlinetool/: README.html  pyproject.toml
data/: fitsdemo_complete.fits  fitsdemo_table.fits  hdf5_demo.h5  json_demo.json  json_deom.json  parquet_demo.parquet
execlogs/: cnc_test_script_4294967294.err  cnc_test_script_4294967294.out
styles/: cn5.mplstyle  cn5_style.css
templates/: slides_tmp.md
test/: cn5_test.py
(+43 files in other folders)
