[project]
name = "cnc-computing-course"
version = "0.1.0"
description = "Content for the CAS Cookies-n-Code Computing Course (CN5)"
authors = [
    {name="Lukas Steinwender"},
    {name="Michael Bradley"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "astropy>=7.1.0",
    "h5py>=3.15.0",
    "ipykernel>=7.0.0",
    "joblib>=1.5.2",
    "matplotlib>=3.10.6",
    "memory-profiler>=0.61.0",
    "mpi4py>=4.1.1",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "pyarrow>=21.0.0",
]

license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

#custom stuff
[project.urls]
Homepage = "https://github.com/swincas/cnc-computing-course"
Repository = "https://github.com/swincas/cnc-computing-course"
Issues = "https://github.com/swincas/cnc-computing-course/issues"

[tool.uv.build-backend]
module-root = "."           #Adjusts where UV looks for code modules
module-name = "cn5_pkg"     #Adjusts where UV looks for code modules