[project]
name = "cn5_pkg"
version = "0.1.0"
description = "Content for the CAS Cookies-n-Code Computing Course (CN5)"
authors = [
    {name="Lukas Steinwender"},
    {name="Michael Bradley"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.3",
]

license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

#custom stuff
[project.urls]
Homepage = "https://github.com/swincas/cnc-computing-course"
Repository = "https://github.com/swincas/cnc-computing-course"
Issues = "https://github.com/swincas/cnc-computing-course/issues"

[project.optional-dependencies]
mpi = [
    "mpi4py>=4.1.1",
]
cn5course = [
    "astropy>=7.1.0",
    "h5py>=3.15.0",
    "ipykernel>=7.0.0",
    "joblib>=1.5.2",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "memory-profiler>=0.61.0",
    "pandas>=2.3.3",
    "pyarrow>=21.0.0",
    "pytest>=8.4.2",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
]

[tool.uv.build-backend]
module-root = "."           #Adjusts where UV looks for code modules
module-name = "cn5_pkg"     #Adjusts where UV looks for code modules
