[project]
name = "commandlinetool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { email = "lukas.steinwender99@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[project.scripts]
commandlinetool = "commandlinetool.main:main"